Fixed image hover on mobile

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -11,7 +11,6 @@ body {
     justify-content: center;
     flex-direction: column;
     @media (max-width: 500px) {
-
         margin-top: 1rem;
     }
     .card {
@@ -45,10 +44,13 @@ body {
             left: 0;
             right: 0;
             opacity: 0;
-            height: 321px;
             transition: .5s ease;
             background-color: $cyan;
             border-radius: 1rem;
+            height: 321px;
+            @media (max-width: 500px) {
+                height: 245px;
+            }
         }
 
         .icon-eye {
@@ -136,6 +138,7 @@ body {
     .attribution {
         font-size: 11px; text-align: center; 
         color: $transparent-white;
+        margin-bottom: 2rem;
        a {
         color: hsl(228, 45%, 44%);
        }
